--- a/src/components/LinkItem.astro
+++ b/src/components/LinkItem.astro
@@ -29,7 +29,7 @@ const link_item = css({
   padding: "8",
   bg: "bg",
   transition: "transform 0.3s {easings.easeOutExpo}",
-  width :"100%",
+  width: "100%",
   _hover: {
     bg: "var(--color)",
     transform: "scale(1.025)",
@@ -37,13 +37,13 @@ const link_item = css({
   },
   sm: {
     fontSize: "4xl",
-    gap: "8"
+    gap: "8",
   },
-  "&> img":{
+  "&> img": {
     height: "4rem",
     width: "4rem",
-    objectFit: "contain"
-  }
+    objectFit: "contain",
+  },
 });
 ---
 
