--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -45,8 +45,10 @@ const { class: className, href, ...rest } = Astro.props;
   window.addEventListener("load", () => {
     const headings = gsap.utils.toArray(".heading") as HTMLElement[];
     headings.forEach((target) => {
-      console.log(target.children)
-      const text = splitText(target.children.length == 0 ? target : target.children[0]);
+      console.log(target.children);
+      const text = splitText(
+        target.children.length == 0 ? target : target.children[0],
+      );
 
       gsap.set(target, {
         opacity: 1,
