--- a/src/components/top/WorkSlider.astro
+++ b/src/components/top/WorkSlider.astro
@@ -40,7 +40,7 @@ const swiper_pagination = css({
   },
 });
 
-const works = await getWorks();
+const works = (await getWorks()).slice(0, 6);
 ---
 
 <div class={swiper_container}>
@@ -102,7 +102,7 @@ const works = await getWorks();
           from: "start",
           amount: 0.2,
         },
-      },
+      }
     );
   });
 </script>
